# AI-Coding-Guidance-Skills

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml  runner.py  setup_check.py
.claude/: settings.json
kernel/: BOOT.md  constitution.md  context_assembler.py  error_messages.py  feedback_loop.py  graph.yaml  graph_executor.py  reflector.py  skill_factory.py  skill_selector.py  state.yaml
kernel/adapters/: ralph_adapter.py
kernel/contracts/: __init__.py  output_format.md
kernel/evolution/: engine.py
kernel/philosophy/: principles.py
kernel/prompts/: coder.md  orchestrator.md  planner.md  reflector.md  reviewer.md  tester.md
knowledge/: skill_composer.py  store.py
knowledge/skills/: _index.yaml
memory/: progress.yaml  state_manager.py
skills/: _index.yaml
skills/relentless-iteration/: SKILL.md
skills/ux-audit/: SKILL.md
tests/: conftest.py  test_capability_assessment.py  test_context_assembler_enhanced.py  test_context_assembler_truncation.py  test_contracts.py  test_contracts_robust_parsing.py  test_coverage_gaps.py  test_error_recovery.py  test_evolution.py  test_feedback_loop.py  test_graceful_shutdown.py  test_graph_executor.py  test_incremental_context.py  test_integration.py  test_kernel.py  test_knowledge.py  test_lightweight_retry.py  test_live_evolution.py  test_memory.py  test_philosophy.py  test_placeholders.py  test_ralph_adapter.py  test_reflector.py  test_runner.py  test_setup_check.py  test_skill_factory.py  test_skill_selector.py  test_stress.py  test_web.py
web/: app.py
(+20 files in other folders)
